force-app/main/default/objects/Snag_List__c/Snag_List__c.object-meta.xml
<CustomObject>
    <label>Snag List</label>
    <nameField>
        <displayFormat>SNAG-{0000}</displayFormat>
        <label>Snag List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snag Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>