force-app/main/default/objects/Snag_List__c/fields/Snag_Completed_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Snag_Completed_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snag Completed File Uploaded</label>
    <type>Checkbox</type>
</CustomField>