force-app/main/default/objects/Snag_List__c/validationRules/File_Validiation.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Validiation</fullName>
    <active>false</active>
    <errorConditionFormula>Snag_Completed_File_Uploaded__c == False</errorConditionFormula>
    <errorMessage>Please Upload File for Completed Snag</errorMessage>
</ValidationRule>